reverse_proxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kittyhash.com
    http:
      paths:
      - path: /basic-radio
        backend:
          serviceName: icecast
          servicePort: 8000
      - path: /status-json.xsl
        backend:
          serviceName: icecast
          servicePort: 8000
      - backend:
          serviceName: ui-service
          servicePort: 80
